Added: more of interfaces to the project